--- a/frontend-service.yml
+++ b/frontend-service.yml
@@ -9,5 +9,6 @@ spec:
         app: frontend
     ports:
         -   protocol: TCP
-            port: 5173
-            targetPort: 5173     
+            port: 80
+            targetPort: 80
+            nodePort: 31631    
