--- a/backend-service.yml
+++ b/backend-service.yml
@@ -8,6 +8,7 @@ spec:
     selector:
         app: backend
     ports:
-        - protocol: TCP
-          port: 5000
-          targetPort: 5000
+        -   port: 8080
+            targetPort: 8080
+            protocol: TCP
+            nodePort: 31100
