--- a/backend-service.yml
+++ b/backend-service.yml
@@ -4,7 +4,7 @@ metadata:
     name: backend-service
     namespace: wanderlust
 spec:
-    type: NodePort
+    type: ClusterIP
     selector:
         app: backend
     ports:
