--- a/frontend-service.yml
+++ b/frontend-service.yml
@@ -4,7 +4,7 @@ metadata:
     name: frontend-service
     namespace: wanderlust
 spec:
-    type: NodePort
+    type: ClusterIP
     selector:
         app: frontend
     ports:
