--- a/backend-service.yml
+++ b/backend-service.yml
@@ -4,11 +4,12 @@ metadata:
     name: backend-service
     namespace: wanderlust
 spec:
-    type: ClusterIP
+    type: NodePort
     selector:
         app: backend
     ports:
         -   port: 8080
             targetPort: 8080
             protocol: TCP
+            nodePort: 31100
 
