--- a/frontend-service.yml
+++ b/frontend-service.yml
@@ -8,7 +8,8 @@ spec:
     selector:
         app: frontend
     ports:
-        -   port: 80
+        -   port: 5173
             targetPort: 5173
             protocol: TCP
+            nodePort: 31000
               
