--- a/frontend-service.yml
+++ b/frontend-service.yml
@@ -3,13 +3,15 @@ kind: Service
 metadata:
     name: frontend-service
     namespace: wanderlust
+    annotations:
+    service.beta.kubernetes.io/aws-load-balancer-type: "classic"
 spec:
-    type: NodePort
+    type: LoadBalancer
     selector:
         app: frontend
     ports:
         -   port: 5173
             targetPort: 5173
             protocol: TCP
-            nodePort: 31000
+
               
