--- a/frontend-deployment.yml
+++ b/frontend-deployment.yml
@@ -1,22 +1,38 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-    name: frontend-deployment
-    namespace: wanderlust
-    labels:
-        app: frontend
+  name: frontend-deployment
+  namespace: wanderlust
+  labels:
+    app: frontend
 spec:
-    replicas: 2
-    selector:
-        matchLabels:
-            app: frontend
-    template:
-        metadata:
-            labels:
-                app: frontend
-        spec:
-            containers:
-                - name: frontend-deployment
-                  image: 307946649652.dkr.ecr.ap-south-1.amazonaws.com/wanderlust-frontend:frontend-55
-                  ports:
-                      - containerPort: 5173
+  replicas: 1
+  selector:
+    matchLabels:
+      app: frontend
+  template:
+    metadata:
+      name: frontend
+      labels:
+        app: frontend
+    spec:
+      containers:
+        - name: frontend
+          image: 307946649652.dkr.ecr.ap-south-1.amazonaws.com/wanderlust-frontend:frontend-55
+          ports:
+            - containerPort: 5173
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: frontend-service
+  namespace: wanderlust
+spec:
+  type: NodePort
+  selector:
+    app: frontend
+  ports:
+    - port: 5173
+      targetPort: 5173
+      protocol: TCP
+      nodePort: 31000
